@@ -41,15 +41,6 @@
    - LMO prime count
    - QS factoring
 
-- forprimes { say } 1000,2000
-  - Tests
-  - Examples
-
-- prime_iterator
-  - Documentation
-  - Tests
-  - Examples
-
 - Make forprimes use a segment sieve
 
 - Figure out a way to make the internal FOR_EACH_PRIME macros use a segmented
